package spil;

public class Players {

    public String Navn;

    public Players (String name) {
        Navn = name;
    }



}
